@@ -943,6 +943,10 @@ test x$CONFIG_RTAI_OPT_DEBUG = xy && AC_DEFINE(CONFIG_RTAI_OPT_DEBUG,1,[Kconfig]
 test x$CONFIG_RTAI_OPT_FUSION = xy && AC_DEFINE(CONFIG_RTAI_OPT_FUSION,1,[Kconfig])
 test x$CONFIG_RTAI_OPT_PIPE = xy && AC_DEFINE(CONFIG_RTAI_OPT_PIPE,1,[Kconfig])
 AC_DEFINE_UNQUOTED(CONFIG_RTAI_OPT_PIPE_NRDEV,$CONFIG_RTAI_OPT_PIPE_NRDEV,[Kconfig])
+test x$CONFIG_RTAI_OPT_FILTER_EVIRQ = xy && AC_DEFINE(CONFIG_RTAI_OPT_FILTER_EVIRQ,1,[Kconfig])
+test x$CONFIG_RTAI_OPT_FILTER_EVTHR = xy && AC_DEFINE(CONFIG_RTAI_OPT_FILTER_EVTHR,1,[Kconfig])
+test x$CONFIG_RTAI_OPT_FILTER_EVSYS = xy && AC_DEFINE(CONFIG_RTAI_OPT_FILTER_EVSYS,1,[Kconfig])
+test x$CONFIG_RTAI_OPT_FILTER_EVALL = xy && AC_DEFINE(CONFIG_RTAI_OPT_FILTER_EVALL,1,[Kconfig])
 
 dnl Native skin options
 test \! x$CONFIG_RTAI_OPT_NATIVE_REGISTRY = x && AC_DEFINE(CONFIG_RTAI_OPT_NATIVE_REGISTRY,1,[Kconfig])
