@@ -52,6 +52,20 @@ int __init xnltt_mount (void)
 	xnltt_evtable[ev].ltt_evid = evid;
 	}
 
+#if CONFIG_RTAI_OPT_FILTER_EVALL
+    xnltt_filter = ~rtai_evall;
+#else /* !CONFIG_RTAI_OPT_FILTER_EVALL */
+#if CONFIG_RTAI_OPT_FILTER_EVIRQ
+    xnltt_filter &= ~rtai_evirq;
+#endif /* CONFIG_RTAI_OPT_FILTER_EVIRQ */
+#if CONFIG_RTAI_OPT_FILTER_EVTHR
+    xnltt_filter &= ~rtai_evthr;
+#endif /* CONFIG_RTAI_OPT_FILTER_EVTHR */
+#if CONFIG_RTAI_OPT_FILTER_EVSYS
+    xnltt_filter &= ~rtai_evthr;
+#endif /* CONFIG_RTAI_OPT_FILTER_EVSYS */
+#endif /* CONFIG_RTAI_OPT_FILTER_EVALL */
+   
     return 0;
 }
 
